add part I and II of the tutorial